# payplusplus

./: CMakeLists.txt  README.md
data/: tests.csv
include/: Company.h  Employee.h  Role.h  Test.h
include/utils/: Parser.h  Profiler.h
scripts/: generate_stress_test.py
src/: Company.cpp  Parser.cpp  Role.cpp  Test.cpp  main.cpp
tests/: salary_test.cpp  test.cpp
